# obstacle_cost_mapper

./: README.md
map_cost_editor/: CMakeLists.txt  package.xml
map_cost_editor/src/: add_cost_node.cpp  set_obstacle_cost_node.cpp  update_cost.cpp
